Adição de login via Google e variáveis de ambiente para autenticação via Google e Facebook
Adição da estratégia de autenticação da Google OAuth2 via a gem omniauth-google-oauth2 e alguns botõs para a efetuação do login.

Também foi alterada a forma de leitura das chaves das APIS do Google e do Facebook, que agora lêem variáveis de ambiente. Um arquivo de exemplo config/local_env.yml.example foi adicionado. Para usá-lo, já que agora a aplicação tenta ler o arquivo 'config/local_env.yml', basta tirar o '.example' do fim do nome e reiniciar a aplicação para que as variáveis sejam lidas. As chaves no exemplo atual funcionam para testes locais. Há um problema, porém, pois as do Facebook funcionam quando a url do navegador é 0.0.0.0/3000, já a do Google funciona com localhost:3000. É preciso corrigir (trocar) a aplicação no Facebook para que ela também aceite requisições de localhost.

Os botões ainda não estão com o layout final, já que seria bom customizar no redu bootstrap.

--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,6 @@ config/initializers/rails_footnotes.rb
 chromedriver.log
 solr/data/*
 solr/pids/*
+config/local_env.yml
 config/sunspot.yml
 .sass-cache/
